# GameDev

./: .env.example  .gitignore  GameSpark_UX_Audit_Report.docx  Makefile  deploy.sh  docker-compose.prod.yml  docker-compose.yml  fix_broken_games.py  games_preview.html  lefthook.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py
backend/app/middleware/: session.py
backend/app/routers/: analytics.py  games.py  health.py
backend/app/services/: content_filter.py  game_generator.py  game_validator.py  rate_limiter.py
backend/tests/: conftest.py  test_config.py  test_content_filter.py  test_database.py  test_game_generator.py  test_games_api.py  test_health.py  test_rate_limiter.py  test_security.py
backend/tests/fixtures/: openrouter_response_valid.json
backend/tools/: validate_runtime.js
fixes/: 08a88179-16cb-467c-9c2a-02acddccfe63.html  270e9947-612b-47ae-a38a-82b97a80f1f6.html  3104c28a-499a-4be2-a97c-06ed51ce8720.html  525cb456-4e10-4f3c-8adb-ec81ba98dbfe.html  7ba7f3b5-2912-42f3-8767-4031faef32d0.html  805fa164-681b-48aa-91e1-7e692a43cd4a.html  e6290cd8-1846-4bea-b77e-e16ae9d002ec.html  ea7cf76b-89b5-44e6-9224-cf4b5da471ea.html  ea983c70-dad7-4506-9bce-728f0d47209c.html
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ErrorMessage.tsx  GameCard.tsx  GameGallery.tsx  GamePlayer.tsx  LoadingScreen.tsx  PromptInput.tsx
(+13 files in other folders)
